--- a/R_Analysis_git.Rmd
+++ b/R_Analysis_git.Rmd
@@ -80,7 +80,7 @@ ggplot(data = runs, aes(x = Month, y = Distance, fill = Month)) +
 
 The largest number of miles ran, 308 miles, was in September, and then we see a *ever-so-slightly* drop to 304 miles in October. This could be possibly be so if my peak mileage week was in September. We then see a large drop from October to November, which was expected due tapering up the race and the fact that the race was on November 20th, so there's no more run data after that date.
 
-```{r peak week}
+```{r peak week, echo = FALSE}
 ggplot(data = runs, aes(x = weekNumber, y = Distance, fill = Month)) + 
   geom_bar(stat="identity") +
   xlab("Week of Plan") + 
@@ -91,7 +91,7 @@ ggplot(data = runs, aes(x = weekNumber, y = Distance, fill = Month)) +
 
 Welp, I was half wrong about that I guess. It seems peak week, week 11, was actually both in September *and* October.
 
-```{r peak wk}
+```{r peak wk, echo = FALSE}
 runs[runs$weekNumber == 11,c('Name','weekNumber','Date','DOW','Distance')]
 ```
 
@@ -112,7 +112,7 @@ ggplot(data = runs, aes(Month, Cad)) +
   ggtitle("Cadence per Month") 
 ```
 
-So, barring some outliers, I can see that my cadence tended to generally increases month over month, and ended up averagin between 170 and 180, barring those outliers. I would assume they were mainly recovery runs, as I was mainly concerned with keeping my heart rate down so I could actually recover on them than I was with making sure my cadence was optimal. I could investigate to see if this was due to having more speed workouts as the plan progressed, in which I would assume my cadence was typically higher), or could it have been due to improved form from an ever-increasing volume????
+So, barring some outliers, I can see that my cadence tended to generally increases month over month, albeit *barely*, and ended up averagin between 170 and 180, barring those outliers. I would assume they were mainly recovery runs, as I was mainly concerned with keeping my heart rate down so I could actually recover on them than I was with making sure my cadence was optimal. I could investigate to see if this was due to having more speed workouts as the plan progressed, in which I would assume my cadence was typically higher), or could it have been due to improved form from an ever-increasing volume????
 
 Another metric would be my average heart rate during runs over the course of the training. Compared to the rise of my cadence, we would expect that my average heart rate would have decreased over time, as my fitness would have increased due to higher mileage and an increasing number of workouts.
 
@@ -128,7 +128,7 @@ ggplot(data = runs, aes(Month, Avg.HR)) +
   ggtitle("Average Heart Rate per Month") 
 ```
 
-So we can see that my hear rate had generally decreased month over month. Now while I would hope it was due to increased fitness (and I still believe that to be the case, just by how I felt during my runs), the drops in temperature as we moved from summer to fall also may have played a part. Since it would have been cooler out, the body would not have been working as hard to cool itself down during my runs, so my heart rate would not have been as high. Maybe finding the historical temperature data and bringing it in could bring some insights into this question.
+So we can see that my hear rate had generally decreased month over month, albeit *barely*. *Again*. Now while I would hope it was due to increased fitness (and I still believe that to be the case, just by how I felt during my runs), the drops in temperature as we moved from summer to fall also may have played a part. Since it would have been cooler out, the body would not have been working as hard to cool itself down during my runs, so my heart rate would not have been as high. Maybe finding the historical temperature data and bringing it in could bring some insights into this question.
 
 Now let's look at cadence and heart rate by Run Type as well for comparisons.
 
@@ -147,9 +147,7 @@ ggplot(data = runs, aes(RunType, Cad)) +
   ggtitle("Cadence per Run Type") 
 ```
 
-
-
-We can ignore the variability in the **Race** run type, since it's only one race. But we can still see that it was either my maximum cadence, or the second or third highest after those 2 quickest workout cadences. We can also see that my recovery runs had the least variability, and recovery runs as well as normal runs were in the lower 170's. I also expected my workouts to have the highest cadence, but it has the lowest median. I can only assume that this was due to recovery sections of interval runs, or warm-ups and cooldowns during tempo runs which were *much* slower and relaxed than even recovery runs. Now let's look at heart rate.
+We can ignore the **Race** run type, since it's only one race. But we can still see that it was either my maximum cadence, or the second or third highest after those 2 quickest workout cadences. We can also see that my recovery runs had the least variability, and recovery runs, as well as normal runs, were in the lower 170's. I also expected my workouts to have the highest cadence, but it has the lowest median and the widest variety. I can only assume that this was due to recovery sections of interval runs, or warm-ups and cooldowns during tempo runs which were *much* slower and relaxed than even recovery runs. Now let's look at heart rate by these runs.
 
 ```{r heart rate by run type, echo = FALSE}
 #avg. cadence grouped by month
@@ -163,58 +161,72 @@ ggplot(data = runs, aes(RunType, Avg.HR)) +
   ggtitle("Average Heart Rate per Run Type") 
 ```
 
-As expected, my heart rate was lowest during recovery runs, but it was also quite varied. We can also see that there were 2 runs wherein my heart rate monitor was off, since my average heart rate was around 70. Also, my average heart rate was not very variable for the other 3 types of runs, excluding the race. This is good, since it means I was able to be consistent in my efforts depending on the type of scheduled run. My Long Runs also tended to have a lower average heart rate than my "normal" runs, which I personally did not expect. But this does a make a little sense, since I was supposed to run at a bit of a slower pace so that I could run longer without bonking. Also, I did expect my heart rate to be higher during workouts, since they were designed to to push my heart rate to the max during **V02 intervals**, and was supposed to be elevated during those "comfortably hard" **tempo runs**. I can also see that there was one single workout wherein it was higher than my average heart rate during the marathon.
+As expected, my heart rate was lowest during recovery runs, but it was also quite varied. We can also see that there were 2 runs wherein my heart rate monitor was off, since my average heart rate was around 70. Also, my average heart rate was not very variable for the other 3 types of runs, excluding the race. This is good, since it means I was able to be consistent in my efforts, depending on the type of scheduled run. My Long Runs also tended to have a lower average heart rate than my "normal" runs, which I personally did not expect. But this does a make a little sense, since I was supposed to run at a bit of a slower pace so that I could run longer without bonking. Also, I did expect my heart rate to be higher during workouts, since they were designed to to push my heart rate to the max during **V02 intervals**, and was supposed to be elevated during those "comfortably hard" **tempo runs**. I can also see that there was one single workout wherein it was higher than my average heart rate during the marathon.
 
-```{r max heart rate}
+```{r max heart rate, echo = FALSE}
 runs[which.max(runs$Avg.HR),]
 ```
 
 So we can see that my max heart rate was during my 10k Tune-up Race, which does not surprise me since it SUCKED.
 
-```{r heart rate over time} 
+```{r heart rate over time, echo = FALSE}
 ggplot(data = runs, aes(x = Date, y = Avg.HR)) + 
   geom_line(aes(group=1)) +
   theme(axis.text.x = element_blank()) +
   xlab("Time") + 
   ylab("Average Heart Rate") + 
-  ggtitle("Average Heart Rate Over Time") + 
-  labs(caption="*Very slight general decrease, with outliers of about 100 in the 1st third of the plan and 
-70 in the last 3rd of the plan")
+  ggtitle("Average Heart Rate Over Time")
 ```
 
-#average pace over plan line
-```{r avg pace}
-ggplot(data = runs, aes(x = Date, y = Avg.Pace)) + 
-  geom_point() + # by color? 
-  stat_smooth() +
-  theme(axis.text.x = element_blank()) +
-  xlab("Time") + 
-  ylab("Date") + 
-  ggtitle("Average Pace (mile/minute)") + 
-  labs(caption="")
-```
 
-So we see a very slight general decrease overall, but it's not very linear at all, so it does not seem to be that significant. Let's see it by coloring the run type.
 
-```{r avg pace by runs}
+
+```{r avg pace by runs, echo = FALSE}
 ggplot(data = runs, aes(x = Date, y = Avg.Pace, colour = RunType)) + 
   geom_point() +
   geom_smooth(fill = NA) +  
   theme(axis.text.x = element_blank()) +
-  #xlab("Date") + 
-  ylab("Average Pace (mile/minute") + 
+  theme(axis.text.y = element_blank()) +
+  xlab("Date") + 
+  ylab("Average Pace (mile/minute)") + 
   ggtitle("Average Pace Over Time") + 
   labs(caption="")
 ```
 
-So, we see that workouts had the lowest average pace, which seemed to actually go up a tad until about halfway through the plan, but there was a variety of different workouts with different focuses, so this really isn't something we can glean anything out of. Long Runs start to increase in average pace, possibly due to an increase in outside temperature frmo July to August causing me to slow down, but then we see a rapid decrease, which start sto taper off at the end there. Normal runs seemed to have a more gradual decrease over time, but it sped up a bit compared to at the start. THen we see that recovery runs slowed down even more so compared to Long Runs, but also had a drop as temperatures cooled (or fitness increased, either or. Maybe both). There was then a quick uptick at the end there, which I would assume would be due to slowing down even more as I tapered for the race, with the 2 slowest recovery  runs happening just before the race. We then see the race there, at about 7:10 min/mile, which, while I am happy with my results, I would *love* to get this down under 7:00 min/mile in my next marathon, with the goal of running about 6:50 min/mile so as to break 3 hours!
+So we see a very slight general decrease overall, but it's not very linear at all, so it does not seem to be that significant. Let's split these into seperate scatter plots by run type.
+
+```{r avg pace by runs - seperate, echo = FALSE}
+ggplot(data = runs, aes(x = Date, y = Avg.Pace, colour = RunType)) + 
+  geom_point() +
+  geom_smooth(fill = NA) +  
+  theme(axis.text.x = element_blank()) +
+  theme(axis.text.y = element_blank()) +
+  xlab("Date") + 
+  ylab("Average Pace (mile/minute)") + 
+  ggtitle("Average Pace Over Time") + 
+  labs(caption="") + 
+  facet_grid(RunType~.)
+```
+
+And, we see that workouts had the lowest average pace, which seemed to actually decrease a tad until about halfway through the plan, but there was a variety of different workouts with different focuses, so this really isn't something we can glean anything out of. Long Runs start to decrease in average pace, possibly due to an increase in outside temperature from July to August causing me to slow down, but then we see a rapid increase, which start sto taper off at the end there. Normal runs seemed to have a more gradual increase over time, but it sped up a bit compared to at the start. Then we see that recovery runs increased down even more so compared to Long Runs, but also had a drop as temperatures cooled (or fitness increased, either or. Maybe both). There was then a quick uptick at the end there, which I would assume would be due to slowing down even more as I tapered for the race, with the 2 slowest recovery runs happening just before the race. We then see the race there, at about 7:10 min/mile, which, while I am happy with my results, I would *love* to get this down under 7:00 min/mile in my next marathon, with the goal of running about 6:50 min/mile so as to break 3 hours!
 
 ```{r bar of steps}
 ggplot(data = runs, aes(RunType, (Cad*(hour(runs$Time)*60)+(minute(runs$Time))+(second(runs$Time)/60)))) + 
-  #geom_jitter(aes(colour = RunType)) +
-  geom_bar(aes(fill = RunType), stat = "identity") + #, 
-               #outlier.colour = "black", alpha = 0.5) +
-  #xlab("Run Type") + 
-  #ylab("Avg Heart Rate") + 
-  #guides(fill=FALSE) +
-  #ggtitle("Average Heart Rate per Run Type") 
+  geom_bar(aes(fill = RunType), stat = "identity") +
+  xlab("Run Type") + 
+  ylab("Steps") + 
+  guides(fill=FALSE) +
+  ggtitle("Total Steps Taken by Run Type") 
+```
+
+more normal runs than all others, somehow recovery runs even less than the race
+
+```{r cadence by hr}
+ggplot(data = runs, aes(x=Cad, y=Avg.HR)) + 
+  geom_point(aes(colour = RunType)) +
+  xlab("Cadence") + 
+  ylab("Average Heart Rate") + 
+  ggtitle("Average Hear Rate by Run Type ")
+```
+
+no relationship
