--- a/R_Analysis_git.Rmd
+++ b/R_Analysis_git.Rmd
@@ -10,14 +10,16 @@ output:
 
 # *Initial Data Inspection*
 
-First, I load in the CSV file created in the **R_Cleaning_Garmin_Strava** script file, which contains the combined dataset of runs from my Philadelphia Marathon training plan from both Strava and Garmin Connect. I then inspect the data to make sure I have all the correct data in the correct data types.
+Hey! So, this was sort-of my first array into actually creating with R and Markdown something to put out on the web for others to see. I thought it would be cool to pull all of my run data that had been collected via my Garmin running watch and uploaded to Garmin Connect and Strava, blend 'em together, and do some analysis on them. I had a lot of fun doing this, and definitely learned a lot thanks to a lot of Googling to get figure out how to get the data just how I wanted it. The script used to get and clean the data can be found [here](https://github.com/newns92/MarathonTrainingAnalysis/blob/master/R_Backups/RCleaningScript.R), as well as a markdown file explaining everything in a bit more detail [here](https://github.com/newns92/MarathonTrainingAnalysis/blob/master/R_Cleaning_Garmin_Strava.md). Now let's get into my actual analysis.
 
-```{r load dataset, echo = FALSE}
+First, I load in the CSV file created in the [R_Cleaning_Garmin_Strava script file](https://github.com/newns92/MarathonTrainingAnalysis/blob/master/R_Backups/RCleaningScript.R), which contains the combined dataset of runs from my Philadelphia Marathon training plan from both Strava and Garmin Connect. I then inspected the data to make sure I have all the correct data in the correct data types.
+
+```{r load dataset}
 runs <- read.csv("cleanedMarathonTrainingData.csv")
 str(runs)
 ```
 
-Well, to start off, I have a column which seems to contain the row numbers from the CSV, so let's remove that before going back to the inspection.
+Well, to start off, I have a column which seems to contain the row numbers from the CSV, so I removed that before going back to the inspection of the first 2 rows.
 
 ```{r remove 1st col, echo = FALSE}
 runs$X <- NULL
@@ -28,7 +30,7 @@ runs$X <- NULL
 head(runs,2)
 ```
 
-Alright, cool. But it looks like my Date field, **Date**, total run time field, **Time**, and average pace (min/mile) field, **Avg.Pace**, are not in the POSIXct format needed. So let's put them back into the correct format.
+Alright, cool. But it looks like my Date field, **Date**, total run time field, **Time**, average pace (min/mile) field, **Avg.Pace**, and starting time field, **StartTime**, are not in the POSIXct format needed. So let's put them back into the correct format.
 
 ```{r fix POSIXct}
 library(lubridate)
@@ -36,14 +38,14 @@ library(lubridate)
 runs$Time <- as.POSIXct(runs$Time)#, format = '%H:%M:%S')
 runs$Avg.Pace <- as.POSIXct(runs$Avg.Pace)#, format = '%H:%M:%S')
 runs$Date <- as.POSIXct(runs$Date)
-runs$StartTime <- hour(strptime(runs$StartTime, format = '%H:%M'))
+runs$StartTime <- as.POSIXct(runs$Avg.Pace)#, format = '%H:%M'))
 
 str(runs)
 ```
 
-Looks like **Month** was also not loaded as on *ordered* factor like I need it. As it is now, if I used it in my graphs, it would be ordereded alphabetically, not chronologically like I need it. So let's convert it back to an ordered factor with the correctly-specified ordering via the **levels** argument.
+Looks like **Month** was also not loaded as on *ordered* factor like I need it to be. As it is now, if I used it in my graphs, it would be ordered alphabetically, not chronologically like I need it. So I converted it back to an ordered factor with the correctly-specified ordering via the **levels** argument.
 
-```{r fix month}
+```{r fix month, echo = FALSE}
 runs$Month <- factor(runs$Month, ordered = TRUE, levels = c("Jul","Aug","Sep","Oct","Nov"))
 ```
 
@@ -70,7 +72,7 @@ It looks like the majority of my runs (20 of 'em) were between 10 and 12 miles, 
 summary(runs$Distance)
 ```
 
-So, since we have a skewed distribution, we want to look at median as our measure of center. We can see the median number of miles I ran in a run is 10 miles, which is less than half of an actual marathon (mean is also basically 10, as well, just to note). So the majority of my runs seem pretty short, compared to the goal distance. This is because the point of a training plan is to get the body to adapt to a high volume of miles, but then to spread it over a period of time so that we can recover properly. We can also see the max distance here is the actual marathon. Now let's look at the total number of miles ran each month, with a pretty obvious expectation to see the total rise month-by-month.
+So, since we have a skewed distribution, we want to look at median as our measure of center. We can see the median number of miles I ran in a run is 10 miles, which is less than half the distance of an actual marathon (the mean is also basically 10, as well, just to note). So the majority of my runs seem pretty short, compared to the goal distance. This is because the point of a training plan is to get the body to adapt to a high volume of miles, but then to spread it over a period of time so that we can recover properly. We can also see the max distance here is the actual marathon. Now let's look at the total number of miles ran each month, with the pretty obvious expectation to see the total rise month-by-month.
 
 ```{r miles by month, echo = FALSE} 
 #miles by month bars
@@ -93,9 +95,9 @@ ggplot(data = runs, aes(x = weekNumber, y = Distance, fill = Month)) +
   ggtitle("Total Miles by Week of Plan")
 ```
 
-Welp, I was half wrong about that I guess. It seems peak week, week 11, was actually both in September *and* October.
+Welp, I was half wrong about peak week I guess. It seems peak week, week 11, was actually both in September *and* October.
 
-```{r peak wk, echo = FALSE}
+```{r peak wkd}
 runs[runs$weekNumber == 11,c('Name','weekNumber','Date','DOW','Distance')]
 ```
 
@@ -115,9 +117,9 @@ ggplot(data = runs, aes(Month, Cad)) +
   ggtitle("Cadence per Month") 
 ```
 
-So, barring some outliers, I can see that my cadence tended to generally increases month over month, albeit *barely*, and ended up averagin between 170 and 180, barring those outliers. I would assume they were mainly recovery runs, as I was mainly concerned with keeping my heart rate down so I could actually recover on them than I was with making sure my cadence was optimal. I could investigate to see if this was due to having more speed workouts as the plan progressed, in which I would assume my cadence was typically higher), or could it have been due to improved form from an ever-increasing volume????
+So, barring some outliers, I can see that my cadence tended to generally increase month over month, albeit *barely*, and ended up averaging between 170 and 180, barring those outliers. I would assume they were mainly recovery runs, as I was mainly concerned with keeping my heart rate down so I could actually recover on them than I was with making sure my cadence was optimal. I could investigate this increase to see if this was due to having more speed workouts as the plan progressed (because I am assuming my cadence was typically higher in these workouts), or could it have been due to either improved running form from an ever-increasing volume and time on my feet.
 
-Another metric would be my average heart rate during runs over the course of the training. Compared to the rise of my cadence, we would expect that my average heart rate would have decreased over time, as my fitness would have increased due to higher mileage and an increasing number of workouts.
+Another metric to take note of would be my average heart rate during runs over the course of the training plan. Compared to the rise of my cadence, I would expect that my average heart rate would have decreased over time, as my fitness would have (hopefully) increased due to higher mileage and increased aerobic base, and an increasing number of workouts.
 
 ```{r HR by month boxplot, echo = FALSE}
 #avg. HR grouped by month
@@ -131,9 +133,9 @@ ggplot(data = runs, aes(Month, Avg.HR)) +
   ggtitle("Average Heart Rate per Month") 
 ```
 
-So we can see that my hear rate had generally decreased month over month, albeit *barely*. *Again*. Now while I would hope it was due to increased fitness (and I still believe that to be the case, just by how I felt during my runs), the drops in temperature as we moved from summer to fall also may have played a part. Since it would have been cooler out, the body would not have been working as hard to cool itself down during my runs, so my heart rate would not have been as high. Maybe finding the historical temperature data and bringing it in could bring some insights into this question.
+So we can see that my heart rate had generally decreased month over month, albeit *barely*. *Again*. And while ignoring those outliers where my average heart rate was 100 BPM or below (thanks, wonky heart rate monitor!). Now while I would hope this decrease was due to increased fitness (and I still believe that to be the case, just by how I felt during my runs), the drops in temperature as we moved from summer to fall also may have played a part. Since it would have been cooler out, the body would not have been working as hard to cool itself down during my runs, so my heart rate would not have been as high. Maybe finding the historical temperature data and bringing it in could bring some insights into this question.
 
-Now let's look at cadence and heart rate by Run Type as well for comparisons.
+But for now let's look at cadence and heart rate by Run Type as well for some comparisons.
 
 ```{r cadence by run type, echo = FALSE} 
 #avg. cadence grouped by month
@@ -150,7 +152,9 @@ ggplot(data = runs, aes(RunType, Cad)) +
   ggtitle("Cadence per Run Type") 
 ```
 
-We can ignore the **Race** run type, since it's only one race. But we can still see that it was either my maximum cadence, or the second or third highest after those 2 quickest workout cadences. We can also see that my recovery runs had the least variability, and recovery runs, as well as normal runs, were in the lower 170's. I also expected my workouts to have the highest cadence, but it has the lowest median and the widest variety. I can only assume that this was due to recovery sections of interval runs, or warm-ups and cooldowns during tempo runs which were *much* slower and relaxed than even recovery runs. Now let's look at heart rate by these runs.
+We can ignore the **Race** run type, since it's only one race. But we can still see that it was either within my top 5 maximum cadences, along with those 2 quick workout cadences and those 2 quick normal run cadences (at the far right of the respective box plots). We can also see that my recovery runs had the least variability, and the median of these runs, as well as of the normal runs, was in the lower 170's. I also expected my workouts to have the highest cadence, but it actually has the lowest median and the widest variety. I can only assume the lower cadence that this was due to recovery sections of interval runs, or warm-ups and cooldowns during tempo runs which were *much* slower and relaxed than even recovery runs. And the wide variability was due to the variety of workouts done, such as repeats going from 400 meters up to 1600 meters, tempo runs, tempo intervals, and tune-up races. 
+
+Now let's look at heart rate by these runs.
 
 ```{r heart rate by run type, echo = FALSE}
 #avg. cadence grouped by month
@@ -158,19 +162,23 @@ ggplot(data = runs, aes(RunType, Avg.HR)) +
   geom_jitter(aes(colour = RunType)) +
   geom_boxplot(aes(fill = RunType), 
                outlier.colour = "black", alpha = 0.5) +
+  scale_colour_brewer(palette = "Set1") +
+  scale_fill_brewer(palette = "Set1") +
   xlab("Run Type") + 
   ylab("Avg Heart Rate") + 
   guides(fill=FALSE) +
   ggtitle("Average Heart Rate per Run Type") 
 ```
 
-As expected, my heart rate was lowest during recovery runs, but it was also quite varied. We can also see that there were 2 runs wherein my heart rate monitor was off, since my average heart rate was around 70. Also, my average heart rate was not very variable for the other 3 types of runs, excluding the race. This is good, since it means I was able to be consistent in my efforts, depending on the type of scheduled run. My Long Runs also tended to have a lower average heart rate than my "normal" runs, which I personally did not expect. But this does a make a little sense, since I was supposed to run at a bit of a slower pace so that I could run longer without bonking. Also, I did expect my heart rate to be higher during workouts, since they were designed to to push my heart rate to the max during **V02 intervals**, and was supposed to be elevated during those "comfortably hard" **tempo runs**. I can also see that there was one single workout wherein it was higher than my average heart rate during the marathon.
+As expected, my heart rate was lowest during recovery runs, but it was also quite varied. We can also again see the runs wherein my heart rate monitor was off, since my average heart rate was around 70 BPM twice and once around 100 BPM. Also, my average heart rate was not very variable for the other 3 types of runs, excluding the race. This is good, since it means I was able to be consistent in my efforts, depending on the type of scheduled run. My Long Runs also tended to have a lower average heart rate than my "normal" runs, which I personally did not expect. But this does a make a little sense, since I was supposed to run at a bit of a slower pace so that I could run longer without bonking. Also, I did expect my heart rate to be higher during workouts, since they were designed to to push my heart rate to the max during V02 intervals, and was supposed to be elevated during those "comfortably hard" tempo runs. I can also see that there was one single workout wherein it was higher than my average heart rate during the marathon.
 
 ```{r max heart rate, echo = FALSE}
 runs[which.max(runs$Avg.HR),]
 ```
 
 So we can see that my max heart rate was during my 10k Tune-up Race, which does not surprise me since it SUCKED.
+
+Now we can checkout my average pace over time.
 
 ```{r heart rate over time, echo = FALSE}
 ggplot(data = runs, aes(x = Date, y = Avg.HR)) + 
@@ -187,7 +195,9 @@ ggplot(data = runs, aes(x = Date, y = Avg.HR)) +
 ```{r avg pace by runs, echo = FALSE}
 ggplot(data = runs, aes(x = Date, y = Avg.Pace, colour = RunType)) + 
   geom_point() +
-  geom_smooth(fill = NA) +  
+  geom_smooth(fill = NA) +
+    scale_colour_brewer(palette = "Set1") +
+  #scale_fill_brewer(palette = "Set1") +
   theme(axis.text.x = element_blank()) +
   theme(axis.text.y = element_blank()) +
   xlab("Date") + 
@@ -196,12 +206,14 @@ ggplot(data = runs, aes(x = Date, y = Avg.Pace, colour = RunType)) +
   labs(caption="")
 ```
 
-So we see a very slight general decrease overall, but it's not very linear at all, so it does not seem to be that significant. Let's split these into seperate scatter plots by run type.
+So we see a very slight general decrease in average pace overall, but it's not very linear at all, so it does not seem to be that significant. Let's split these into seperate scatter plots by run type.
 
 ```{r avg pace by runs - seperate, echo = FALSE}
 ggplot(data = runs, aes(x = Date, y = Avg.Pace, colour = RunType)) + 
   geom_point() +
   geom_smooth(fill = NA) +  
+      scale_colour_brewer(palette = "Set1") +
+
   theme(axis.text.x = element_blank()) +
   theme(axis.text.y = element_blank()) +
   xlab("Date") + 
@@ -220,6 +232,8 @@ table(runs$RunType)
 
 ggplot(data = runs, aes(RunType, (Cad*((hour(runs$Time)*60)+(minute(runs$Time))+(second(runs$Time)/60))))) + 
   geom_bar(aes(fill = RunType), stat = "identity") +
+      scale_fill_brewer(palette = "Set1") +
+
   xlab("Run Type") + 
   ylab("Steps") + 
   guides(fill=FALSE) +
@@ -231,6 +245,8 @@ So we see the majority of runs I had were normal runs, with just a bit less reco
 ```{r cadence by hr, echo = FALSE}
 ggplot(data = runs, aes(x=Cad, y=Avg.HR)) + 
   geom_point(aes(colour = RunType)) +
+        scale_colour_brewer(palette = "Set1") +
+
   xlab("Cadence") + 
   ylab("Average Heart Rate") + 
   ggtitle("Average Hear Rate by Cadence")
@@ -241,6 +257,8 @@ By looking at average heart rate by average cadence, we can see that there is no
 ```{r elevation and avg hr, echo = FALSE}
 ggplot(data = runs, aes(x=Elevation.Gain, y=Avg.HR)) + 
   geom_point(aes(colour = RunType)) +
+        scale_colour_brewer(palette = "Set1") +
+
   geom_smooth(fill = NA) +
   xlab("Elevation Gain (ft.)") + 
   ylab("Average Heart Rate (BPM)") + 
@@ -253,6 +271,8 @@ So it looks like there was a very slight increase in average heart rate as eleva
 ggplot(data = runs, aes(x=RunType, y=Max.HR)) + 
   geom_jitter(aes(colour = RunType)) +
   geom_boxplot(aes(fill = RunType), outlier.colour = "black", alpha = 0.5) +
+    scale_colour_brewer(palette = "Set1") +
+  scale_fill_brewer(palette = "Set1") +
   xlab("Run Type") + 
   ylab("Max Heart Rate (BPM)") + 
   ggtitle("Max Heart Rate by Run Type")
