--- a/docs/R_Analysis_git.Rmd
+++ b/docs/R_Analysis_git.Rmd
@@ -276,6 +276,6 @@ ggplot(data = runs, aes(x=RunType, y=Max.HR)) +
 It's interesting to note that each run type has a very low variability in maximum heart rate with the exception of recovery runs. We see a good number of outliers for normal runs. There are also numerous maximum heart rates  that are up to about 200, which was due to an inaccurate heart rate monitor, since the only chance I had of reaching that heart rate would have been when I was pushing myself to max exertion, which would have only occured during a workout, or during the race. But since this was a marathon, and not a 5K, I will assume it was another heart rate monitor inaccuracy, which is something we just can't always prevent.
 
 # Conclusion
-That's all I can think of to check out so far. If you're reading this and can think of anything else, let me know in [LinkedIn!](https://www.linkedin.com/in/stephen-newns). I can't wait to add to this dataset with my training runs for Philly 2017, with the hopes of breaking 3 hours!
+That's all I can think of to check out so far. If you're reading this and can think of anything else, let me know in [LinkedIn!](https://www.linkedin.com/in/stephen-newns) I can't wait to add to this dataset with my training runs for Philly 2017, with the hopes of breaking 3 hours! But for now, I'm going to move onto the analysis of artists I listen to on Spotify via their API!
 
 The code for this can be found [here](https://github.com/newns92/MarathonTrainingAnalysis/blob/master/R_Analysis_git.Rmd), as well as the code for the [cleaning and initial creation of the dataset](https://github.com/newns92/MarathonTrainingAnalysis/blob/master/Files/R_CleaningScript.R)
